Reimplement component-chat example as sse-chat.